feat: aggiunta GET /games/{id} per leggere info della partita all'inizio e in caso di disconnessione. Aggiornato swagger
